--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,22 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <form (ngSubmit)="submitForm()">
+      <ion-searchbar [(ngModel)]="searchTerm" name="searchTerm"></ion-searchbar>
+    </form>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
   <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-list>
+    <ion-item *ngFor="let song of songs" (click)="pushPage(song)">
+      <ion-thumbnail item-start>
+        <img [src]="song.artworkUrl60">
+      </ion-thumbnail>
+        <p>{{song.trackName}}</p>
+        <p>{{song.artistName}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
